effect: Fix initialization of QEvent::isAccepted() in cloned events in OffscreenQuickView

QEvent::isAccepted() is initialized to true by default.

BUG: 480538